[gd_scene load_steps=11 format=2]

[ext_resource path="res://menu2.gd" type="Script" id=1]
[ext_resource path="res://Fuente/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.6722, 28.7194 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.7456, 32.6028 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("espacio3/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("espacio2/Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("espacio1/Sprite3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "termo"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("termo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.576471, 0.12549, 0.12549, 0 ), Color( 0.576471, 0.12549, 0.12549, 0 ), Color( 0.576471, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("termo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 794.619, 45.6739 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "cuadermo"
tracks/0/type = "value"
tracks/0/path = NodePath("cuadermo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.12549, 0.164706, 0.576471, 0 ), Color( 0.12549, 0.164706, 0.576471, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cuadermo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 892.313, 53.8989 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "pem"
tracks/0/type = "value"
tracks/0/path = NodePath("pemdrive:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.576471, 0.12549, 0.537255, 0 ), Color( 0.576471, 0.12549, 0.537255, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pemdrive:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 987.155, 46.3209 ) ]
}

[node name="ecena1" type="Node2D"]
position = Vector2( -14.9641, 5.44148 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 63.6007
margin_top = 270.303
margin_right = 245.601
margin_bottom = 433.303
custom_fonts/font = SubResource( 1 )
text = "Mochila"

[node name="espacio1" type="KinematicBody2D" parent="."]
position = Vector2( 986.27, 47.6131 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="espacio1"]
shape = SubResource( 2 )

[node name="Sprite3" type="Sprite" parent="espacio1"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )

[node name="espacio2" type="KinematicBody2D" parent="."]
position = Vector2( 892.405, 50.3338 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="espacio2"]
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="espacio2"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )

[node name="espacio3" type="KinematicBody2D" parent="."]
position = Vector2( 794.458, 46.2527 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="espacio3"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="espacio3"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1.10803, 6.64818 )
texture = ExtResource( 3 )

[node name="termo" type="KinematicBody2D" parent="."]
modulate = Color( 0.576471, 0.12549, 0.12549, 1 )
position = Vector2( 534.071, 212.692 )

[node name="Sprite" type="Sprite" parent="termo"]
modulate = Color( 0.576471, 0.12549, 0.12549, 1 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="termo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="termo/Area2D"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="termo"]
modulate = Color( 0.576471, 0.12549, 0.12549, 1 )
position = Vector2( 1.80499, -1.80499 )
shape = SubResource( 2 )

[node name="cuadermo" type="KinematicBody2D" parent="."]
modulate = Color( 0.12549, 0.164706, 0.576471, 1 )
position = Vector2( 610.053, 407.977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cuadermo"]
modulate = Color( 0.12549, 0.164706, 0.576471, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="cuadermo"]
modulate = Color( 0.12549, 0.164706, 0.576471, 1 )
position = Vector2( 0, -1.67017 )
texture = ExtResource( 3 )

[node name="pemdrive" type="KinematicBody2D" parent="."]
modulate = Color( 0.576471, 0.12549, 0.537255, 1 )
position = Vector2( 834.657, 418.518 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pemdrive"]
modulate = Color( 0.576471, 0.12549, 0.537255, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="pemdrive"]
modulate = Color( 0.576471, 0.12549, 0.537255, 1 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/varraojetos = SubResource( 4 )

[node name="votomtermo" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 503.183
margin_top = 179.864
margin_right = 570.183
margin_bottom = 247.864

[node name="termo2" type="AnimationPlayer" parent="."]
anims/termo = SubResource( 5 )

[node name="votomcuadero" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 581.0
margin_top = 376.0
margin_right = 643.0
margin_bottom = 439.0

[node name="amicuadermo" type="AnimationPlayer" parent="."]
anims/cuadermo = SubResource( 6 )

[node name="votompem" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 804.0
margin_top = 390.0
margin_right = 867.0
margin_bottom = 448.0

[node name="Animapem" type="AnimationPlayer" parent="."]
anims/pem = SubResource( 7 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="termo/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="votomtermo" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="votomcuadero" to="." method="_on_votomcuadero_pressed"]
[connection signal="pressed" from="votompem" to="." method="_on_votompem_pressed"]
